test/error/0018-voidparam.c

int
foo(void, int x)
{
	return 0;
}

int
main()
{
	return foo();
}
